# ccl-project

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  CMakePresets.json  Config.cmake.in  README.md  ccl-config.cmake  pch.hpp  vcpkg.json
bench/: BenchmarkFound.cmake  CMakeLists.txt  benchmark_found.cmake
bench/lex/: c_lex.cpp  c_lexer.ccll  c_lexer.hpp  c_lexer.ixx  ccll.cpp
benchmark/: CMakeLists.txt  gll.cpp  glr.cpp  lr.cpp  test_grammar.hpp
catch/: CMakeLists.txt  Catch2Found.cmake  catch2_found.cmake  main.cpp  runner.cpp
catch/astlang/type_system/: type_system.cpp
catch/ccl/: const_string.cpp  enum.cpp  hex_char_to_int.cpp  is_same_to_any.cpp  join.cpp  lazy.cpp  main.cpp  raii.cpp  string_map.cpp  utf_convertion.cpp  utf_set.cpp
catch/ccl/analysis/: excpetion.cpp
catch/ccl/codegen/: basic_codegen.cpp
catch/ccl/core/: as.cpp
catch/ccl/coroutine/: fibonacci_generator.cpp  yield_from_empty_generator.cpp
catch/ccl/flatmap/: contains.cpp  indexing.cpp  overflow.cpp
catch/ccl/format/core/: arguments_counter.cpp  string_splitter.cpp
catch/ccl/format/format/: int.cpp  location.cpp  no_arguments.cpp  string.cpp
catch/ccl/lex/: analysis_shared.cpp  lexical_analyzer.cpp
catch/ccl/lex/analyzer_generator/: C.rule  static_generator.cpp
catch/ccl/lex/dot_item/: binary_expression.cpp  logical_item.cpp  recurrence.cpp  repetition.cpp  sequence.cpp  union.cpp
catch/ccl/lex/lexical_analyzer/: character.cpp  sequence.cpp  string.cpp  union.cpp  unrecognizable_token.cpp  user_defined_recurrence.cpp
catch/ccl/lex/rule_block/: binary_expression.cpp  repetition.cpp  sequence.cpp  union.cpp
catch/ccl/logical_ops/: logical_and.cpp  logical_or.cpp
catch/ccl/parser/: parser.cpp
catch/ccl/parsing/: basic_math.ccll  basic_math.hpp  basic_math_grammar.hpp  first_set.cpp  follow_set.cpp  grammer.ccll  grammer.hpp  lr_parser.cpp  lr_parser_for_math.hpp  non_filled_handlers.cpp  parser.cpp  peg_grammar.hpp  peg_parser.cpp
catch/ccl/parsing/ll/: ll_parser.cpp  ll_parser_for_math.hpp
catch/ccl/parsing/lr/: glr_parser.cpp  lr_parser.cpp  lr_parser_for_math.hpp
catch/ccl/parsing/peg/: peg_grammar.ccll  peg_grammar.hpp  peg_parser.cpp
catch/ccl/parsing/sets/: ff_enum_helper.hpp  first_set.cpp  follow_set.cpp  test_grammar.hpp
catch/ccl/raii/: raii.cpp
catch/ccl/string_view/: comparison.cpp  construction.cpp  contains.cpp  find.cpp  iteration.cpp  open_close_find.cpp  rfind.cpp  strip.cpp  substr.cpp  without_last_character.cpp
catch/ccl/text/: location.cpp  remove_escaping.cpp
catch/ccl/text/basic_text_iterator/: raw_future.cpp  raw_iteration.cpp
catch/ccl/text/text_iterator/: line_tracking.cpp  location.cpp  ts_tracker.cpp
catch/ccl/text/text_iterator_modules/: exception.cpp  (+1 more)
catch/fsc/parser/: parser.cpp
catch/libcerberus/: CMakeLists.txt  const_string.cpp  dependencies.cpp  enum.cpp  hex_char_to_int.cpp  main.cpp  string_map.cpp  template_string.cpp  utf_convertion.cpp  utf_set.cpp
catch/libcerberus/analysis/: excpetion.cpp
catch/libcerberus/char/: hex_char_to_int.cpp
catch/libcerberus/coroutine/: generator.cpp
catch/libcerberus/flatmap/: contains.cpp  indexing.cpp  overflow.cpp
catch/libcerberus/lex/: analysis_shared.cpp  lexical_analyzer.cpp
catch/libcerberus/logical_operations/: logical_and.cpp  logical_or.cpp
catch/libcerberus/logical_ops/: logical_and.cpp  logical_or.cpp
catch/libcerberus/pair/: default_comparison.cpp  first_value_comparison.cpp  second_value_compare.cpp
catch/libcerberus/string_view/: comparison.cpp  construction.cpp  find.cpp  iteration.cpp  open_close_find.cpp  rfind.cpp  substr.cpp
catch/libcerberus/template_string/: passing.cpp  template_string.cpp
catch/libcerberus/text/: location.cpp
catch/libcerberus/typed_bitset/: char_multiset.cpp  char_set.cpp  multiset.cpp  set.cpp
catch/libcerberus/utf_set/: ascii_set.cpp  utf_set.cpp
catch/text/location/: location.cpp
programs/: CMakeLists.txt  ast-lang.cpp  ccll.cpp  ff_enum_helper.ccll  fsc_lex_generator.cpp  fsc_lex_rule.ccll  lr.cpp  main.astlang  test.astlang  test_input.cclp
src/: CMakeLists.txt
src/ast-lang/: CMakeLists.txt  ast-lang.cpp
src/ast-lang-2/: CMakeLists.txt  ast-lang.cpp
src/ast-lang-2/ast/: node.cpp
src/ast-lang-2/function/: builtin_function.cpp  function.cpp  functions_holder.cpp
src/ast-lang-2/interpreter/: interpreter.cpp  stack.cpp
src/ast-lang-2/ts/: type.cpp  type_system.cpp
src/ast-lang/ast/: global_declaration.cpp  global_declarations.cpp  node.cpp  node_sequence.cpp
src/ast-lang/interpreter/: builtin_function.cpp  function_interface.cpp  interpreter.cpp  stack.cpp  type.cpp
src/ast-lang/type_system/: type.cpp  type_system.cpp
src/ccl/: CMakeLists.txt  raw_string_matcher.cpp  runtime.cpp  string_view.cpp  utf8.cpp  utf_set.cpp
src/ccl/codegen/: basic_codegen.cpp  basic_codegen.cxxm
src/ccl/dot/: dot_repr.cpp
src/ccl/handler/: cmd.cxxm  cmd_formatter.cpp  cmd_formatter.cxxm  cmd_formtatter.cxxm  cmd_handler.cpp  cmd_handler.cxxm  exception_handler.cpp  exception_handler.cxxm
src/ccl/lex/: analysis_shared.cpp  lexical_analyzer.cpp  token.cpp  tokenizer.cpp
src/ccl/lexer/: lexical_analyzer.cpp  lexical_analyzer.cxxm  token.cpp  tokenizer.cpp  tokenizer.cxxm
src/ccl/parser/: empty_moves_fixer.cpp  first_set.cpp  follow_set.cpp  glr_parser.cpp  glr_runner.cpp  grammar_rules_storage.cpp  lr_parser.cpp  node.cpp  node_templates.cpp  parser.cpp  parser2.cpp  parsing_rule.cpp  parsing_rules.cpp  peg_parser.cpp
src/ccl/text/: iterator_exception.cpp  iterator_exception.cxxm  remove_escaping.cpp
src/ccl/visualization/: graph.cpp
src/cerbers/: raw_string_matcher.cpp
src/cerbers/lex/: analysis_shared.cpp  lexical_analyzer.cpp
src/cerbers/text/: iterator_exception.cpp
src/fsc/lex/: lexical_analyzer.cpp
src/fsc/parser/: parser.cpp
src/lex/: analysis_shared.cpp  lexical_analyzer.cpp
src/lex/dot_item/: basic_item.cpp  dot_item.cpp  repetition.cpp  sequence.cpp  union.cpp
src/text/text_iterator/: comment_skipper.cpp  notation_escaping_symbolizer.cpp  text_iterator.cpp
(+714 files in other folders)
